ajustes para prod

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -2,8 +2,8 @@
 import './header.css';
 const { origin } = Astro.props;
 import Logo from '../Logo.astro';
+import type { OriginData } from './types';
 ---
-
 <header class="header">
 	<div class="header__container">
 		<Logo name="Kevin Ivan"/>
@@ -11,7 +11,7 @@ import Logo from '../Logo.astro';
 			<button class="menu__btn" >Menú</button>
 			<ul class="header__list">
 				{
-					origin.map((data) => (
+					origin.map((data: OriginData) => (
 						<li>
 							<a class="menu__link" href={data.link}>
 								<span class="icon__container" >
